# NoctiForge-Runner

./: '  Cargo.toml  LICENSE  README.md  flake.nix  justfile  rust-toolchain.toml
.github/workflows/: CI.yml
cli/: Cargo.toml
cli/src/: command.rs  main.rs
examples/custom/src/: main.rs
examples/echo/: Cargo.toml  Nocti.toml
examples/echo/src/: main.rs
libs/proto/: Cargo.toml  build.rs
libs/proto/api/: action.proto  controlplane.proto  registry.proto  worker.proto
libs/proto/src/: lib.rs
libs/sdk/src/: lib.rs
proto/: Cargo.toml  build.rs
proto/api/: action.proto
proto/src/: lib.rs
scripts/: setup.sh
sdk/: Cargo.toml
sdk/src/: lib.rs
services/cli/: Cargo.toml
services/cli/src/: command.rs
services/cli/src/command/: push.rs  trigger.rs
services/cli/src/command/push/: mod.rs
services/cli/src/command/run/: custom.rs  mod.rs
services/controlplane/: Cargo.toml  README.md
services/controlplane/src/: config.rs  main.rs
services/controlplane/src/server/: controlplane.rs  mod.rs
services/controlplane/src/services/: digest_service.rs  mod.rs
services/registry/: Cargo.toml  README.md
services/registry/src/: main.rs  path.rs  registry.rs
services/registry/src/storage/: local.rs  mod.rs
services/worker/: Cargo.toml
services/worker/src/: background.rs  config.rs  controlplane_client.rs  main.rs  path.rs  registry_clint.rs  server.rs  worker.rs
services/worker/src/client/: controlplane_client.rs  mod.rs  registry_clint.rs
services/worker/src/server/: mod.rs
services/worker/src/worker/: container.rs  docker.rs  function_invocations.rs  mod.rs  native.rs  organizer.rs  spec.rs  worker.rs
