[package]
name = "temp"
version = "0.1.0"
edition = "2024"

[[bin]]
name = "noctiForge"
path = "src/main.rs"

[dependencies]
anyhow = { version = "1" }
clap = { version = "4", features = ["derive"] }
proto = { path = "../../libs/proto" }
serde = { version = "1", features = ["derive"] }
tokio = { version = "1", features = ["macros", "rt-multi-thread", "process"] }
tokio-util = { features = ["compat"], version = "0" }
toml = "0"
tonic = "0"
